fix head message overlapping

--- a/ui/styles.css
+++ b/ui/styles.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
 
+:root {
+  --white: rgba(255, 255, 255, 0.7);
+  --hightlight-bg: var(--light-blue);
+  --light-blue: #e0e0ff;
+  --dark-blue: rgb(85, 90, 141);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -8,6 +15,9 @@
 
 html,
 body {
+  font-size: 14px;
+  font-family:  "Fira Code", monospace;
+  color: var(--white);
   height: 100%;
   width: 100%;
   margin: 0;
@@ -16,9 +26,7 @@ body {
 
 body {
   position: relative;
-  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1.4em;
-  color: #FFF;
   margin: 0 auto;
   font-weight: 300;
   background-color: #111;
@@ -48,8 +56,23 @@ body::-webkit-scrollbar-thumb {
 }
 /* Custom scrollbar - End */
 
+.flex-box {	
+  display: flex;	
+}	
+.flex-col {	
+  display: flex;	
+  flex-direction: column;	
+}	
+.flex-row {	
+  display: flex;	
+  flex-direction: row;	
+}	
+.margin-bot-4vh {	
+  margin-bottom: 4vh;	
+}
+
 #title {
-  color: #fff;
+  color: var(--white);
   font-size: 6vmin;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   /* font-family: 'Fira Code', monospace; */
@@ -74,7 +97,7 @@ body::-webkit-scrollbar-thumb {
 #start-menu {
   display: flex;
   flex-direction: column;
-  border: 1px solid aliceblue;
+  border: 1px solid var(--white);
   margin: 10vh 0 10vh 0;
 }
 
@@ -84,13 +107,13 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
   justify-content: center;
   line-height: 0;
-  margin: 3vh 0 5vh 0;
+  margin: 13vh 0 5vh 0;
 }
 
-#container button {
+#start-menu button {
   font-size: 3.5vmin;
   font-family: "Fira Code", monospace;
-  color: rgba(255, 255, 255, 0.7);
+  color: var(--white);
   text-align: center;
   background-color: transparent;
   border: 0;
@@ -98,13 +121,12 @@ body::-webkit-scrollbar-thumb {
   margin: 10px;
 }
 
-#container button:hover {
-  color: #fff;
+#start-menu button:hover {
+  color: var(--white);
   background-color: rgba(85, 90, 141, 0.4);
 }
 
 #controller {
-  font-family: "Fira Code", monospace;
   margin-left: 15px;
   display: flex;
   flex-direction: column;
@@ -112,7 +134,8 @@ body::-webkit-scrollbar-thumb {
 
 #controller button {
   font-size: 1.5vw;
-  color: rgba(255, 255, 255, 0.7);
+  font-family: "Fira Code", monospace;
+  color: var(--white);
   text-align: center;
   background-color: transparent;
   border: 0;
@@ -150,11 +173,11 @@ body::-webkit-scrollbar-thumb {
 }
 
 .level-container:hover {
-  background-color: #e0e0ff;
+  background-color: var(--light-blue);
 }
 
 .level-container:hover .level-title {
-  color: rgb(85, 90, 141);
+  color: var(--dark-blue);
 }
 
 .level {
@@ -203,7 +226,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .cell:hover {
-  background-color: #e0e0ff;
+  background-color: var(--light-blue);
 }
 
 .cell-hint-highlight {
@@ -211,6 +234,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 #footer {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -236,28 +260,6 @@ a:hover {
   }
 }
 
-#grid-size-lable {
-  font-size: 1.5vw;
-  height: 1.5vw;
-}
-
-#grid-size-lable,
-#grid-size-input {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-#grid-size-input input {
-  color: #aaa;
-  font-size: 3vw;
-  width: 10vw;
-  text-align: center;
-  padding: 5px 0 5px 0;
-  border: 0;
-  background-color: #4d4d4d;
-}
-
 /* slider - start */
 
 input[type="range"] {
@@ -266,7 +268,6 @@ input[type="range"] {
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
-  /* width: 300px; */
   height: 0.3vw;
   background: #bbb;
   border: none;
@@ -281,7 +282,6 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 50%;
   background: rgb(85, 90, 141);
   transform: translate(0, -25%);
-  /* margin-top: -4px; */
 }
 
 input[type="range"]:focus {
@@ -306,21 +306,19 @@ input[type="range"]:focus::-webkit-slider-runnable-track {
 }
 
 .slider {
-  width: 5vw;
+  width: 100%;
   height: 30px;
 }
 
 .slider-label {
-  /* display:block; */
-  /* line-height: 2; */
   font-size: 0.8vw;
-  color: #aaa;
+  color: var(--white);
   margin-right: 3px;
 }
 
 .slider-value {
   font-size: 1vw;
-  color: #fff;
+  color: var(--white);
   transform: translate(5px, 1px);
 }
 
